--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@react-navigation/drawer": "^7.5.9",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.2",
     "expo": "^54.0.12",
@@ -18,7 +19,9 @@
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-web": "~0.21.0"
+    "react-native-reanimated": "~4.1.1",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
