--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.2",
     "expo": "^54.0.12",
+    "expo-file-system": "~19.0.17",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
