--- a/api/package.json
+++ b/api/package.json
@@ -26,11 +26,13 @@
     "@nestjs/common": "^11.0.17",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "mongoose": "^8.19.2",
     "mysql2": "^3.15.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
