--- a/app/app.json
+++ b/app/app.json
@@ -13,14 +13,24 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyA6zJNVglrQUSMxSbTLrpOe_R7t6vXjxOs"
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyA6zJNVglrQUSMxSbTLrpOe_R7t6vXjxOs"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -30,6 +40,20 @@
             "expo-image-picker",
             {
               "photosPermission": "La aplicación App necesita acceder a tu librería"
+            }
+        ],
+        [
+            "expo-location",
+            {
+              "locationAlwaysAndWhenInUsePermission": "La aplicación funciona sabiendo tu ubicación gps."
+            }
+        ],
+        [
+            "expo-camera",
+            {
+              "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+              "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+              "recordAudioAndroid": true
             }
         ]
     ]
