--- a/app/package.json
+++ b/app/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@expo/ngrok": "^4.1.3",
     "@react-navigation/drawer": "^7.5.9",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.2",
     "expo": "^54.0.13",
+    "expo-camera": "~17.0.9",
     "expo-file-system": "~19.0.17",
     "expo-image-picker": "~17.0.8",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-chart-kit": "^3.3.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
